; ModuleID = '/home/carl/AnghaBench/reactos/base/shell/progman/extr_dialog.c_GroupFormatToFormatName.c'
source_filename = "/home/carl/AnghaBench/reactos/base/shell/progman/extr_dialog.c_GroupFormatToFormatName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GroupFormatToFormatName.FormatNames = internal constant [3 x i8*] [i8* bitcast ([12 x i32]* @.str to i8*), i8* bitcast ([8 x i32]* @.str.1 to i8*), i8* bitcast ([11 x i32]* @.str.2 to i8*)], align 16
@.str = private unnamed_addr constant [12 x i32] [i32 87, i32 105, i32 110, i32 100, i32 111, i32 119, i32 115, i32 32, i32 51, i32 46, i32 49, i32 0], align 4
@.str.1 = private unnamed_addr constant [8 x i32] [i32 78, i32 84, i32 32, i32 65, i32 110, i32 115, i32 105, i32 0], align 4
@.str.2 = private unnamed_addr constant [11 x i32] [i32 78, i32 84, i32 32, i32 85, i32 110, i32 105, i32 99, i32 111, i32 100, i32 101, i32 0], align 4
@NT_Unicode = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @GroupFormatToFormatName(i64 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = load i64, i64* @NT_Unicode, align 8
  %6 = icmp ugt i64 %4, %5
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %12

8:                                                ; preds = %1
  %9 = load i64, i64* %3, align 8
  %10 = getelementptr inbounds [3 x i8*], [3 x i8*]* @GroupFormatToFormatName.FormatNames, i64 0, i64 %9
  %11 = load i8*, i8** %10, align 8
  store i8* %11, i8** %2, align 8
  br label %12

12:                                               ; preds = %8, %7
  %13 = load i8*, i8** %2, align 8
  ret i8* %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
